tdf#42897 Warn the user if string without quote is entered as condition value.

Change-Id: I5b30b608c0192b434ff237513ed7fbbf5af43f11